--- a/sass/components/_panel.scss
+++ b/sass/components/_panel.scss
@@ -42,12 +42,24 @@
             background-color: $color-grey-dark-1;
             color: $color-grey-light-1;
             transform: translateY(-1px);
+
+            @media (hover: none) {
+                border: 2px solid transparent;
+                background-color: $color-grey-light-1;
+                color: $color-grey-dark-1;
+                transform: translateY(0);
+            }
         }
         
         &:active,
         &:focus {
             box-shadow: 0 2px 4px rgba(0, 0, 0, .6);
             transform: translateY(1px);
+
+            @media (hover: none) {
+                box-shadow: 0 3px 6px rgba(0, 0, 0, .6);
+                transform: translateY(0);
+            }
         }
     }
 
