--- a/sass/components/_color.scss
+++ b/sass/components/_color.scss
@@ -19,7 +19,7 @@
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, .4);
         cursor: pointer;
-        transition: all .2s;
+        transition: all .3s;
         animation-name: moveIn;
         animation-duration: .8s;
         animation-fill-mode: forwards;
@@ -44,28 +44,38 @@
 
         &--wrong {
             pointer-events: none;
-            opacity: .5;
-            width: 80%;
-            height: 80%;            
+            opacity: .3;
         }
 
         &--correct {
             pointer-events: none;
-            opacity: 1;
             width: 100%;
             height: 100%;
+            
+            @media (hover: none) {
+                border: 3px solid #090;
+                width: 90%;
+                height: 90%;
+            }
         }
 
         &--other-answer {
             pointer-events: none;
             opacity: 1;
-            width: 85%;
-            height: 85%;
+
+            @media (hover: none) {
+                border: 3px solid $color-red;
+            }
         }
 
         &:hover {
             width: 100%;
             height: 100%;
+
+            @media (hover: none) {
+                width: 90%;
+                height: 90%;
+            }
         }
     }
 
